--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,14 @@
     background-color: lightblue;
 }
 
+.trash-zone {
+    border: 2px dashed gray;
+    min-height: 64px;
+    min-width: 64px;
+    border-radius: .5rem;
+    background-color: lightgray;
+}
+
 .bug-medal {
     display: table-cell;
     height: 100%;
